<resources>
    <string name="app_name">神魔數學家</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="share_to">分享到&#8230;</string>
    <string name="share">分享</string>
    <string name="complete">已完成</string>
    <string name="loading">讀取中&#8230;</string>
    <string name="producing">製作中&#8230;</string>
    <string name="progress">進度</string>
    <string name="table">表格</string>
    <string name="option">選項</string>
    <string name="detail">細節</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <string name="fetchNetworkData">從網路取得資料中&#8230;</string>
    <string name="cardsLoading">讀取卡片中&#8230;</string>
    <string name="leave">離開頁面?</string>
    <string name="star">★</string>
    <string name="or">或</string>
    <string name="advance">進階</string>
    <string name="related">相關</string>
    <string name="n_cards">張卡片</string>
    <string name="accept">接受</string>
    <string name="reject">拒絕</string>
    <string name="today">今天</string>
    <string name="stamina">體力</string>
    <string name="date">日期</string>
    <string name="time">時間</string>
    <string name="dateLine">換日線</string>
    <string name="unknown_card">未知卡片</string>
    <string name="card">卡片</string>
    <string name="web">網頁</string>
    <string name="uid">UID</string>
    <string name="enterUid">請輸入 UID</string>
    <string name="verify">驗證碼</string>
    <string name="enterVerify">請輸入 驗證碼</string>
    <string name="noNetwork">沒有網路，請連接網路後重試</string>
    <string name="how_to_use">使用說明</string>
    <string name="use">使用</string>
    <string name="noUse">不使用</string>
    <string name="search">搜尋</string>
    <string name="enterText">請輸入文字</string>
    <string name="searchRange">搜尋範圍</string>
    <string name="useSearch">使用搜尋</string>
    <string name="clear">清除</string>
    <string name="cleared">已清除完成</string>
    <string name="selectedSearch">特選搜尋</string>
    <string name="cards_show">顯示項目</string>
    <string name="cards_attack_formula">卡片攻擊力計算式</string>
    <string name="copy">複製</string>
    <string name="enterStone">請先選擇符石</string>
    <string name="desktopStone">符石版面</string>
    <string name="head">起始</string>
    <string name="tail">結束</string>
    <string name="random">隨機</string>
    <string name="cards_n_card">%d 張</string>
    <string name="cards_selection_kind">%1$d / %2$d 種卡片</string>
    <string name="cards_selection">%1$d / %2$d 張卡片</string>
    <string name="cards_read">%s 張卡片已讀取</string>
    <string name="cards_normId">編號</string>
    <string name="cards_level">等級</string>
    <string name="cards_attr">屬性</string>
    <string name="cards_name">名稱</string>
    <string name="cards_rarity">稀有</string>
    <string name="cards_space">空間</string>
    <string name="cards_series">系列</string>
    <string name="cards_min">最小</string>
    <string name="cards_max">最大</string>
    <string name="cards_maxLv">最大 Lv</string>
    <string name="cards_maxMuLv">肥料最佳 Lv</string>
    <string name="cards_maxTuLv">肥料上限 Lv</string>
    <string name="cards_expMax">滿等經驗</string>
    <string name="cards_expCurve">經驗曲線</string>
    <string name="cards_ameLv">昇華</string>
    <string name="cards_soul">靈魂</string>
    <string name="cards_skill">技能</string>
    <string name="cards_skillActive">主動技</string>
    <string name="cards_skillLeader">隊長技</string>
    <string name="cards_skillDesc">效果</string>
    <string name="cards_skillDesc2">附加技能效果</string>
    <string name="cards_skillMin">初始 CD</string>
    <string name="cards_skillMax">滿等 CD</string>
    <string name="cards_battleName">關卡名稱</string>
    <string name="cards_attr_water">水</string>
    <string name="cards_attr_fires">火</string>
    <string name="cards_attr_earth">木</string>
    <string name="cards_attr_light">光</string>
    <string name="cards_attr_darks">暗</string>
    <string name="cards_attr_heart">心</string>
    <string name="cards_attr_water_enchanted">水強化</string>
    <string name="cards_attr_fires_enchanted">火強化</string>
    <string name="cards_attr_earth_enchanted">木強化</string>
    <string name="cards_attr_light_enchanted">光強化</string>
    <string name="cards_attr_darks_enchanted">暗強化</string>
    <string name="cards_attr_heart_enchanted">心強化</string>
    <string name="cards_race">種族</string>
    <string name="cards_race_god">神族</string>
    <string name="cards_race_demon">魔族</string>
    <string name="cards_race_human">人類</string>
    <string name="cards_race_beast">獸類</string>
    <string name="cards_race_dragon">龍類</string>
    <string name="cards_race_elf">妖精類</string>
    <string name="cards_race_machina">機械族</string>
    <string name="cards_race_evolve">進化素材</string>
    <string name="cards_race_level">強化素材</string>
    <string name="cards_turn_runestone">轉化為X符石</string>
    <string name="cards_turn_into">(轉化|添加)(|為)</string>
    <string name="cards_skillSameActive">相同主動技能卡片</string>
    <string name="cards_skillSameActive_n">相同主動技能卡片 (共 %s 張)</string>
    <string name="cards_series_n">同系列卡片 (共 %s 張)</string>
    <string name="cards_evolve_release">進化 / 潛能解放 / 異空轉生  所需素材列表</string>
    <string name="cards_source">來源</string>
    <string name="cards_target">目標</string>
    <string name="cards_need_material">需要素材</string>
    <string name="cards_combine">卡片合體</string>
    <string name="cards_race_runestone">種族符石</string>
    <string name="cards_race_stone_god">神族</string>
    <string name="cards_race_stone_demon">魔族</string>
    <string name="cards_race_stone_human">人族</string>
    <string name="cards_race_stone_beast">獸族</string>
    <string name="cards_race_stone_dragon">龍族</string>
    <string name="cards_race_stone_elf">妖族</string>
    <string name="cards_race_stone_machina">機械族</string>
    <string name="cards_add_leader">包括 隊長技</string>
    <string name="cards_add_detail2">包括 卡牌資訊</string>
    <string name="cards_add_detail">包括 隊伍/組合技能 (卡牌資訊)</string>
    <string name="cards_race_stone_sample">例如搜尋 : (水|火)(神族|妖族)(|強化)符石</string>
    <string name="cards_runestone">符石</string>
    <string name="cards_runestone_race">符石種族</string>
    <string name="cards_runestone_attr">符石屬性</string>
    <string name="cards_runestone_enchanted">強化符石</string>
    <string name="cards_details">卡牌資訊</string>
    <string name="cards_pack">我的背包</string>
    <string name="cards_pack_ok">背包讀取完成 %s</string>
    <string name="cards_name_normId">編號及名稱</string>
    <string name="cards_runestone_water">水符石</string>
    <string name="cards_runestone_fires">火符石</string>
    <string name="cards_runestone_earth">木符石</string>
    <string name="cards_runestone_light">光符石</string>
    <string name="cards_runestone_darks">暗符石</string>
    <string name="cards_runestone_heart">心符石</string>
    <string name="cards_runestone_water_enchanted">水強化符石</string>
    <string name="cards_runestone_fires_enchanted">火強化符石</string>
    <string name="cards_runestone_earth_enchanted">木強化符石</string>
    <string name="cards_runestone_light_enchanted">光強化符石</string>
    <string name="cards_runestone_darks_enchanted">暗強化符石</string>
    <string name="cards_runestone_heart_enchanted">心強化符石</string>
    <string name="cards_Cassandra">#1046 卡珊德拉(水巫) (水人7星)\n3.5x回復力+攻擊力\n(更好的有, 露西 #1955, 瑪奇 #2281)</string>
    <string name="cards_Jade">#2221 翡翠 (木妖6星)\n妖精 = 3x回復力+攻擊力</string>
    <string name="cards_Pandora">#2380 潘朵拉 (暗妖7星)\n妖精 = 5x回復力+攻擊力</string>
    <string name="cards_no">無</string>
    <string name="cards_attack_ratio">攻擊倍率</string>
    <string name="cards_star">星 (稀有度)</string>
    <string name="cards_common">常用排序 (^ = 滿昇華, # = 滿等滿技)</string>
    <string name="cards_HP">生命力</string>
    <string name="cards_Attack">攻擊力</string>
    <string name="cards_Recovery">回復力</string>
    <string name="cards_Sum">三圍</string>
    <string name="cards_common_maxHP">生命力 (^#)</string>
    <string name="cards_common_maxAttack">攻擊力 (^#)</string>
    <string name="cards_common_macRecovery">回復力 (^#)</string>
    <string name="cards_common_maxSum">三圍(生+攻+回) (^#)</string>
    <string name="cards_common_skillCDMax">滿等 CD (^)</string>
    <string name="cards_common_space">空間</string>
    <string name="cards_common_race">種族(神>魔>人>獸>龍>妖>機>進>強)</string>
    <string name="cards_common_own_count">擁有張數</string>
    <string-array name="cards_common_keys_race">
        <item>@string/cards_race_god</item>
        <item>@string/cards_race_demon</item>
        <item>@string/cards_race_human</item>
        <item>@string/cards_race_beast</item>
        <item>@string/cards_race_dragon</item>
        <item>@string/cards_race_elf</item>
        <item>@string/cards_race_machina</item>
        <item>@string/cards_race_evolve</item>
        <item>@string/cards_race_level</item>
    </string-array>
    <string name="cards_special">技能特選</string>
    <string name="cards_special_add_detail">包括 隊伍技能，組合技能 (卡牌資訊)</string>
    <string name="cards_special_class_runestone">符石類</string>
    <string name="cards_special_class_until">自身狀態維持類</string>
    <string name="cards_special_class_skill">自身狀態類</string>
    <string name="cards_special_class_enemy">敵方狀態類</string>
    <string name="cards_special_class_attack_eval">攻擊力計算類</string>
    <string name="cards_special_class_attack_spec">攻擊特性類</string>
    <string name="cards_special_class_move_time">移動時間類</string>
    <string name="cards_special_class_others">其他類</string>
    <string name="cards_freemove">排珠</string>
    <string name="cards_keep">效果在卡片上 (死亡後消失)</string>
    <string name="cards_explode">引爆符石</string>
    <string name="cards_morecoin">獲得的金幣增加</string>
    <string name="cards_extend_time">移動符石時間 (延長/減少)</string>
    <string name="cards_runestone_drop_rate_transfer">符石掉落機率降至 [機率]</string>
    <string name="cards_active_also_possess_heart">主動技/隊長技 - 兼具心符石效果</string>
    <string name="cards_active_also_possess">主動技 - 兼具</string>
    <string name="cards_leader_also_possess">隊長技 - 兼具</string>
    <string name="cards_no_defeat">根性 (不會使你死亡)</string>
    <string name="cards_active_damage_less">主動技 - 傷害減少</string>
    <string name="skillLv_gemini_title">雙子座 (#0359) 練滿技到15，需要 3張 技10的 邪魔史萊姆 (#0333)。</string>
    <string name="skillLv_gemini_01">★1 練一隻 小史萊姆 [暗史萊姆 #104] 從 技1 變成 技5，可吃小魔女 [小魔女莉莉絲 #0094] 或小史萊姆</string>
    <string name="skillLv_gemini_02">★2 進化成 中史萊姆 [幽靈史萊姆 (#105)] 技5</string>
    <string name="skillLv_gemini_03">★3 重複步驟 1 &amp; 2 直到練成 6隻 [技5 中史萊姆]</string>
    <string name="skillLv_gemini_04">★4 練成 [技8 中史萊姆] (技8 = 技5 + 5 x 技5)</string>
    <string name="skillLv_gemini_05">★5 連續吃 5隻 [技1 中史萊姆] 到技10 (技9 or 技10 = 技8 + 5 x 技1)</string>
    <string name="skillLv_gemini_06">★6 進化 [技10 中史萊姆] 到 大史萊姆 [技10 邪魔史萊姆 (#0333)]</string>
    <string name="skillLv_gemini_07">★7 重複步驟 3, 4, 5 &amp; 6 直到練成 3隻 [技10 大史萊姆]</string>
    <string name="skillLv_gemini_08">★8 雙子座 吃 3隻 [技10 大史萊姆] 直接滿技</string>
    <string name="skillLv_chessia_title">切西亞 (#1238) 練滿技到10，需要 1張 技10的 赤焰蜥蜴戰士 (#0079)。</string>
    <string name="skillLv_chessia_01">★1~★4 練一隻 [技5 赤蜥蜴戰士 (#0078)]，可用小地精、小狼人吃技到技5</string>
    <string name="skillLv_chessia_02">★5 進化成 中蜥蜴 [技5 赤焰蜥蜴戰士 (#0079)]</string>
    <string name="skillLv_chessia_03">★6 連續吃 5隻 [技1 中蜥蜴] 直到練成 1隻 [技10 中蜥蜴]</string>
    <string name="skillLv_chessia_04">★7 切西亞 吃 1隻 [技10 中蜥蜴] 直接滿技</string>
    <string name="skillLv_azazel_title">阿撒茲勒 (#1101) 練滿技到12，需要 2張 技10的 寒霜龍 (#1112)。(切西亞練技方式 x 2)</string>
    <string name="skillLv_azazel_01">★1~★4 練一隻 [技5 中史萊姆 (#0097)]</string>
    <string name="skillLv_azazel_02">★5 [技1 寒霜幼龍 (#1111)] 吃 [技5 中史萊姆] 變成 技5</string>
    <string name="skillLv_azazel_03">★6 連續吃 5隻 [技1 中史萊姆] 直到練成 1隻 [技10 寒霜幼龍]</string>
    <string name="skillLv_azazel_04">★7 [技10 寒霜幼龍] 進化成 [技10 寒霜龍]</string>
    <string name="skillLv_azazel_05">★8 重複步驟 5, 6 &amp; 7 到練成 2張 [技10 寒霜龍]</string>
    <string name="skillLv_azazel_06">★9 阿撒茲勒 吃 2隻 [技10 寒霜龍] 直接滿技</string>
    <string name="skillLv_special_01_title">僅用 11張 卡片吃到技6的方式</string>
    <string name="skillLv_special_01_01">★1 技1 = 技1 + 10 x 技1</string>
</resources>