<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/sesBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/grey4">

            <!-- Special way -->
            <TextView
                style="@style/skill_sample_title"
                android:text="@string/skillLv_special_01_title"/>

            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_special_01_01"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/t20dp"/>

            <!-- Gemini -->
            <TextView
                style="@style/skill_sample_title"
                android:text="@string/skillLv_gemini_title"/>

            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_gemini_01"/>

            <LinearLayout
                style="@style/skill_sample_rule">
                <include
                    layout="@layout/view_skill_eat_030101x4"/>
                <include
                    layout="@layout/view_skill_eat_040301x5"/>
                <include
                    layout="@layout/view_skill_eat_050401x5"/>
            </LinearLayout>

            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_gemini_02"/>
            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_gemini_03"/>
            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_gemini_04"/>

            <LinearLayout
                style="@style/skill_sample_rule">
                <include
                    layout="@layout/view_skill_eat_080505x5"/>
            </LinearLayout>

            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_gemini_05"/>
            <LinearLayout
                style="@style/skill_sample_rule">
                <include
                    layout="@layout/view_skill_eat_090801x5"/>
                <include
                    layout="@layout/view_skill_eat_100901x5"/>
            </LinearLayout>

            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_gemini_06"/>
            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_gemini_07"/>

            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_gemini_08"/>
            <LinearLayout
                style="@style/skill_sample_rule">
                <include
                    layout="@layout/view_skill_eat_151010x2"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/t20dp"/>

            <!-- Chessia -->
            <TextView
                style="@style/skill_sample_title"
                android:text="@string/skillLv_chessia_title"/>

            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_chessia_01"/>
            <LinearLayout
                style="@style/skill_sample_rule">
                <include
                    layout="@layout/view_skill_eat_030101x4"/>
                <include
                    layout="@layout/view_skill_eat_040301x5"/>
                <include
                    layout="@layout/view_skill_eat_050401x5"/>
            </LinearLayout>

            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_chessia_02"/>
            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_chessia_03"/>
            <LinearLayout
                style="@style/skill_sample_rule">
                <include
                    layout="@layout/view_skill_eat_090801x5"/>
            </LinearLayout>
            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_chessia_04"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/t20dp"/>

            <!-- Azazel -->
            <TextView
                style="@style/skill_sample_title"
                android:text="@string/skillLv_azazel_title"/>

            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_azazel_01"/>
            <LinearLayout
                style="@style/skill_sample_rule">
                <include
                    layout="@layout/view_skill_eat_030101x4"/>
                <include
                    layout="@layout/view_skill_eat_040301x5"/>
                <include
                    layout="@layout/view_skill_eat_050401x5"/>
            </LinearLayout>
            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_azazel_02"/>
            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_azazel_03"/>
            <LinearLayout
                style="@style/skill_sample_rule">
                <include
                    layout="@layout/view_skill_eat_090801x5"/>
            </LinearLayout>
            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_azazel_04"/>
            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_azazel_05"/>
            <TextView
                style="@style/common_text.white"
                android:text="@string/skillLv_azazel_06"/>
            <LinearLayout
                style="@style/skill_sample_rule">
                <include
                    layout="@layout/view_skill_eat_121010x1"/>
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
</ScrollView>