<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/cardRow.blueV"
    tools:background="#8000"
    android:orientation="horizontal">

    <TextView
        style="@style/cardText.header.2"
        android:textColor="@color/yellow"
        android:text="@string/cards_Sum"/>

    <TextView
        style="@style/cardText.header.2"
        android:text="@string/cards_HP"/>

    <TextView
        style="@style/cardText.header.2"
        android:text="@string/cards_Attack"/>

    <TextView
        style="@style/cardText.header.2"
        android:text="@string/cards_Recovery"/>

    <TextView
        style="@style/cardText.header.2"
        android:text="@string/cards_level"/>
</LinearLayout>