<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#8000">

        <ImageView
            android:id="@+id/sortReset"
            style="@style/sortIcon"
            android:src="@drawable/s_i049"/>

        <TextView
            android:id="@+id/sortAttrTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sortTitle"
            android:text="@string/cards_attr"/>

        <LinearLayout
            android:id="@+id/sortAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/sortIcon"
                android:tag="@string/cards_attr_water"
                android:src="@drawable/inv_water"/>
            <ImageView
                style="@style/sortIcon"
                android:tag="@string/cards_attr_fires"
                android:src="@drawable/inv_fire"/>
            <ImageView
                style="@style/sortIcon"
                android:tag="@string/cards_attr_earth"
                android:src="@drawable/inv_earth"/>
            <ImageView
                style="@style/sortIcon"
                android:tag="@string/cards_attr_light"
                android:src="@drawable/inv_light"/>
            <ImageView
                style="@style/sortIcon"
                android:tag="@string/cards_attr_darks"
                android:src="@drawable/inv_dark"/>
        </LinearLayout>

        <TextView
            android:id="@+id/sortRaceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sortTitle"
            android:text="@string/cards_race"/>

        <GridLayout
            android:id="@+id/sortRaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="5">

            <ImageView
                style="@style/sortIcon"
                android:tag="@string/cards_race_god"
                android:src="@drawable/inv_god"/>
            <ImageView
                style="@style/sortIcon"
                android:tag="@string/cards_race_demon"
                android:src="@drawable/inv_fiend"/>
            <ImageView
                style="@style/sortIcon"
                android:tag="@string/cards_race_human"
                android:src="@drawable/inv_human"/>
            <ImageView
                style="@style/sortIcon"
                android:tag="@string/cards_race_beast"
                android:src="@drawable/inv_beast"/>
            <ImageView
                style="@style/sortIcon"
                android:tag="@string/cards_race_dragon"
                android:src="@drawable/inv_dragon"/>

            <ImageView
                style="@style/sortIcon"
                android:tag="@string/cards_race_elf"
                android:src="@drawable/inv_elf"/>
            <ImageView
                style="@style/sortIcon"
                android:tag="@string/cards_race_machina"
                android:src="@drawable/inv_machina"/>
            <ImageView
                style="@style/sortIcon"
                android:tag="@string/cards_race_evolve"
                android:src="@drawable/inv_evolve"/>
            <ImageView
                style="@style/sortIcon"
                android:tag="@string/cards_race_level"
                android:src="@drawable/inv_level"/>
        </GridLayout>

        <TextView
            android:id="@+id/sortStarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sortTitle"
            android:text="@string/cards_star"/>
        <GridLayout
            android:id="@+id/sortStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4">
            <TextView
                style="@style/sortStarText"
                android:tag="1"
                android:text="1"/>
            <TextView
                style="@style/sortStarText"
                android:tag="2"
                android:text="2"/>
            <TextView
                style="@style/sortStarText"
                android:tag="3"
                android:text="3"/>
            <TextView
                style="@style/sortStarText"
                android:tag="4"
                android:text="4"/>
            <TextView
                style="@style/sortStarText"
                android:tag="5"
                android:text="5"/>
            <TextView
                style="@style/sortStarText"
                android:tag="6"
                android:text="6"/>
            <TextView
                style="@style/sortStarText"
                android:tag="7"
                android:text="7"/>
            <TextView
                style="@style/sortStarText"
                android:tag="8"
                android:text="8"/>

        </GridLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/sortCassandraTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/sortTitle"
                android:text="@string/cards_Cassandra"/>
            <RadioGroup
                android:id="@+id/sortCassandraList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/sortCassandraNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:text="@string/cards_no"/>
                <RadioButton
                    android:id="@+id/sortCassandraAttack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:text="@string/cards_Cassandra_attack"/>
                <RadioButton
                    android:id="@+id/sortCassandraRatio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:text="@string/cards_Cassandra_attack_ratio"/>
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/sortSpecialTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/sortTitle"
            android:text="@string/cards_special"/>
        <RadioGroup
            android:id="@+id/sortSpecialList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/sortSpecialNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/cards_no"/>
            <RadioButton
                android:id="@+id/sortSpecialFreeMove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/cards_freemove"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>